[tool.poetry]
name = "wawa_transport_api"
version = "0.1.0"
description = "Purely for testing Warsaw UM Open API for public transportation"
authors = ["prophet_an <adam.nowik@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pytest-mock = "^3.8.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
